--- a/force-app/main/default/classes/BaselineSurveyRemote.cls
+++ b/force-app/main/default/classes/BaselineSurveyRemote.cls
@@ -7,8 +7,8 @@ public class BaselineSurveyRemote {
     @AuraEnabled
     public static String getBaselineSurveyURL(String userMode, Id invitationId){
         try {
-            if(userMode != CommunityService.USER_MODE_PARTICIPANT) {
-                throw new SurveyService.SurveyException('Survey not available');
+            if(userMode != CommunityService.USER_MODE_PARTICIPANT || SurveyService.getInstance().isInvitationExpired(invitationId)) {
+                throw new SurveyService.SurveyException(Label.Invitation_Expired);
             }
 
             return JSON.serialize(SurveyService.getInstance().getSurveyWrapper(invitationId));
