--- a/force-app/main/default/classes/Test_SurveyService.cls
+++ b/force-app/main/default/classes/Test_SurveyService.cls
@@ -4,7 +4,7 @@
 @IsTest(SeeAllData = true)
 private class Test_SurveyService {
 
-    private static Trial_Survey__c ts;
+    static Trial_Survey__c ts;
 
     @IsTest
     static void getSurveyWrapperTest() {
@@ -16,12 +16,19 @@ private class Test_SurveyService {
         Test.startTest();
         TestData testData = new TestData();
 
+        Reminder_Schedule__c schedule = new Reminder_Schedule__c(
+                First_Reminder_day__c = 1,
+                Second_Reminder_day__c = 2
+        );
+        insert  schedule;
+
         ts = new Trial_Survey__c(
                 Active_On_Status__c = PSEService.PSE_STATUS_ENROLLED,
                 Clinical_Trial_Profile__c = testData.ctp.Id,
                 Expires_After_Days__c = 5,
+                Reminder_Schedule__c = schedule.Id,
                 Survey__c = survey.get(0).Id,
-                Visible_For__c = 'Participant'
+                Whose_response_needed__c = 'Patient only'
         );
         insert ts;
 
@@ -40,12 +47,19 @@ private class Test_SurveyService {
         Test.startTest();
         TestData testData = new TestData();
 
+        Reminder_Schedule__c schedule = new Reminder_Schedule__c(
+                First_Reminder_day__c = 1,
+                Second_Reminder_day__c = 2
+        );
+        insert  schedule;
+
         ts = new Trial_Survey__c(
                 Active_On_Status__c = PSEService.PSE_STATUS_ENROLLED,
                 Clinical_Trial_Profile__c = testData.ctp.Id,
                 Expires_After_Days__c = 5,
+                Reminder_Schedule__c = schedule.Id,
                 Survey__c = survey.get(0).Id,
-                Visible_For__c = 'Participant'
+                Whose_response_needed__c = 'Patient only'
         );
         insert ts;
 
@@ -66,12 +80,19 @@ private class Test_SurveyService {
         Test.startTest();
         TestData testData = new TestData();
 
+        Reminder_Schedule__c schedule = new Reminder_Schedule__c(
+                First_Reminder_day__c = 1,
+                Second_Reminder_day__c = 2
+        );
+        insert  schedule;
+
         ts = new Trial_Survey__c(
                 Active_On_Status__c = PSEService.PSE_STATUS_ENROLLED,
                 Clinical_Trial_Profile__c = testData.ctp.Id,
                 Expires_After_Days__c = 5,
+                Reminder_Schedule__c = schedule.Id,
                 Survey__c = survey.get(0).Id,
-                Visible_For__c = 'Participant'
+                Whose_response_needed__c = 'Patient only'
         );
         insert ts;
         insert SurveyService.getInstance().generateInvitation(ts, testData.pse);
