--- a/force-app/main/default/classes/VisitService.cls
+++ b/force-app/main/default/classes/VisitService.cls
@@ -16,22 +16,32 @@ public with sharing class VisitService {
     }
 
     public List<Visit__c> getVisits(String filter) {
+        return getVisits(filter, null);
+    }
+
+    public List<Visit__c> getPreviewVisits() {
+        return getVisits(null, 3);
+    }
+
+    private List<Visit__c> getVisits(String filter, Integer limitNumber) {
+
         if(!ParticipantService.getInstance().getState().showVisits) return null;
 
         List<String> fields = new List<String>{
                 'Name',
                 'Timeplane__c',
-                'Icons__c'
+                'Icons__c',
+                'Status__c',
+                'Completed_Date__c',
+                'Is_Adhoc__c',
+                '(SELECT Id FROM Tasks WHERE Status = \'Open\')'
         };
         String visitPlan = ParticipantService.getInstance().getState().pse.Clinical_Trial_Profile__r.Visit_Plan__c;
 
-        String fullFilter = 'Visit_Plan__c = \'' + visitPlan + '\' ORDER BY Order__c';
+        String fullFilter = 'Visit_Plan__c = \'' + visitPlan + '\'';
         if (filter != null) fullFilter += filter;
+        String orderBy = 'Order__c';
 
-        return (List<Visit__c>) DatabaseService.getInstance().queryImpl(fields, Visit__c.getSObjectType(), fullFilter);
-    }
-
-    public List<Visit__c> getPreviewVisits() {
-        return getVisits(' LIMIT 3');
+        return (List<Visit__c>) DatabaseService.getInstance().queryImpl(fields, Visit__c.getSObjectType(), fullFilter, orderBy, limitNumber);
     }
 }
