--- a/force-app/main/default/classes/TaskService.cls
+++ b/force-app/main/default/classes/TaskService.cls
@@ -45,7 +45,8 @@ public without sharing class TaskService {
             'Visible_For__c',
             'Action_URL__c',
             'Reminder_Date__c',
-            'Originator__c'
+            'Originator__c',
+            'Patient_Visit__c'
     };
 
     public static final List<String> TASK_STATUS_GROUP_EXPIRE_AVAILABLE = new List<String> {
