--- a/force-app/main/default/classes/LookupSearchResult.cls
+++ b/force-app/main/default/classes/LookupSearchResult.cls
@@ -3,12 +3,12 @@
 * The Lookup controller returns a List<LookupSearchResult> when sending search result back to Lightning
 */
 public class LookupSearchResult {
-
-    private String id;
-    private String sObjectType;
-    private String icon;
-    private String title;
-    private String subtitle;
+    
+    @AuraEnabled public String id;
+    @AuraEnabled public String sObjectType;
+    @AuraEnabled public String icon;
+    @AuraEnabled public String title;
+    @AuraEnabled public String subtitle;
 
     public LookupSearchResult(String id, String sObjectType, String icon, String title, String subtitle) {
         this.id = id;
@@ -17,29 +17,5 @@ public class LookupSearchResult {
         this.title = title;
         this.subtitle = subtitle;
     }
-
-    @AuraEnabled
-    public String  getId() {
-        return id;
-    }
-
-    @AuraEnabled
-    public String getSObjectType() {
-        return sObjectType;
-    }
-
-    @AuraEnabled
-    public String getIcon() {
-        return icon;
-    }
-
-    @AuraEnabled
-    public String getTitle() {
-        return title;
-    }
-
-    @AuraEnabled
-    public String getSubtitle() {
-        return subtitle;
-    }
+    
 }
